--- a/src/views/policies.ejs
+++ b/src/views/policies.ejs
@@ -162,9 +162,43 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/edit-policy/${row.id_poliza}">
+                    if (row.tipo_individual_poliza === 'SALUD') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-health/${row.id_poliza}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
+                    } else if (row.tipo_individual_poliza === 'AUTOMÓVIL') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-vehicle/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'PATRIMONIAL') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-patrimonial/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'FIANZA') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-bail/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'OTROS RAMOS') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-another-branch/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'FUNERARIO') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-funeral/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'VIDA') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-life/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'AP') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-ap/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    } else if (row.tipo_individual_poliza === 'VIAJE') { 
+                        return `<form class="form-inline" method="get" action="/sistema/edit-policy-travel/${row.id_poliza}">
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                </form>`;
+                    }
                 }
             },
             {
